# LegacyClonk

./: .ccls  .editorconfig  .gitmodules  .travis.yml  BUILD.mac  BUILD.windows  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README.md  TRADEMARK  aclocal.m4  appveyor.yml  clonk.dsw  clonk.vc7.sln  clonk.vc9.sln  config.h.cmake  config.h.in  configure  configure.ac  credits.txt  version
.github/workflows/: build-configs.yml  build.yml  c-cpp.yml  ci-config.yml  release.yml  validate-c4script-cpp.yml
anigrab/: anigrab.cpp  anigrab.dsp  anigrab.dsw
anigrab/loadpng/: bmphed.h  common.cpp  common.h  loadpng.cpp  loadpng.h  savepng.cpp  savepng.h
appveyor/: build.sh
autobuild/: Linux-x86-chroot.sh  Linux-x86.sh  Linux.sh  Mac-arm64.sh  Mac.sh  MakeCombinedUpdateGroups.ps1  MakeContentGroupsAndUpdateGroups.ps1  MakeEngineGroupUpdateGroups.ps1  MakeEngineUpdateGroups.ps1  PublishToItch.ps1  Windows-x64.sh  Windows-x86.sh  Windows.sh  build.sh  ci.toml  clang16_mac.cmake  clang_mac.cmake  custom_gcc.cmake  gcc13_20.04.cmake  gcc14_20.04.cmake  generate_ci_config.py  mac_any_cast.h  setup_linux.sh
autobuild/itch/: linux.toml  win-arm64.toml  win32.toml  win64.toml  winarm64.toml
cmake/: FindDbgHelp.cmake  Findminiupnpc.cmake  GenerateStringTableFiles.cmake  GetArchitecture.c  GetArchitecture.cmake
cmake/filelists/: C4Group.cmake  C4Group.txt  Engine.cmake  Engine.txt  EngineApple.cmake  EngineApple.txt  EngineConsoleNonWin32.cmake  EngineConsoleNonWin32.txt  EngineGtk.cmake  EngineSdl.cmake  EngineSdl.txt  EngineSdlMainloop.cmake  EngineSdlMainloop.txt  EngineWin32.cmake  EngineWin32.txt  EngineX.txt  PchExclude.cmake  PchExclude.txt  Std.cmake  Std.txt  StdConsole.txt  StdConsoleWin32.txt  StdConsoleX.txt  StdGtk.txt  StdWin32.txt  StdX.txt
editor/: editor.dsp  editor.vc7.vcproj  editor.vc9.vcproj
editor/hlp/: ClonkDE.cnt  ClonkDE.hpj  ClonkUS.cnt  ClonkUS.hpj  ControlsDE.rtf  ControlsUS.rtf  MakeHelpDE.bat  MakeHelpUS.bat  ManualDE.rtf  ManualUS.rtf  frontend.hm
editor/inc/: ButtonEx.h  C4AboutDlg.h  C4CompilerWrapper.h  C4DefListEx.h  C4DownloadDlg.h  C4EditSlot.h  C4Explorer.h  C4ExplorerCfg.h  C4ExplorerDlg.h  C4Frontend.h  C4IdCtrlButtons.h  C4IdListCtrl.h  C4IdSelectDlg.h  C4ItemTypes.h  C4LandscapeCtrl.h  C4LicenseDlg.h  C4MessageBox.h  C4OptionsSheet.h  C4PNG.h  C4PageBehavior.h  C4PageDeveloper.h  C4PageEditor.h  C4PageEnvironment.h  C4PageGame.h  C4PageLandscape.h  C4PagePlayerStart.h  C4PageProgram.h  C4PageWeather.h  C4PromotionDlg.h  C4RegistrationDlg.h  C4ScenarioDefinitionsDlg.h  C4ScenarioDlg.h  C4SplashDlg.h  C4TypeSelectDlg.h  C4Utilities.h  C4ViewCtrl.h  C4ViewItem.h  DIBitmap.h  DllGetVersion.h  FileVersion.h  (+10 more)
editor/res/: CursorCopy.cur  New.c4d  New.c4f  New.c4p  New.c4s  New.rtf  NewFolder.c4d  editor.rc  resource.h
editor/src/: ButtonEx.cpp  C4AboutDlg.cpp  C4DefListEx.cpp  C4DownloadDlg.cpp  C4EditSlot.cpp  C4EditorPage.cpp  C4Explorer.cpp  C4ExplorerCfg.cpp  C4ExplorerDlg.cpp  C4GamePage.cpp  C4IdCtrlButtons.cpp  C4IdListCtrl.cpp  C4IdSelectDlg.cpp  C4ItemTypes.cpp  C4LandscapeCtrl.cpp  C4LicenseDlg.cpp  C4MessageBox.cpp  C4OptionsSheet.cpp  C4PNG.cpp  C4PageDeveloper.cpp  C4PageEnvironment.cpp  C4PageLandscape.cpp  C4PagePlayerStart.cpp  C4ProgramPage.cpp  C4RegistrationDlg.cpp  C4ScenarioDefinitionsDlg.cpp  C4ScenarioDlg.cpp  C4SoundPage.cpp  C4SplashDlg.cpp  C4TypeSelectDlg.cpp  C4Utilities.cpp  C4ViewCtrl.cpp  C4ViewItem.cpp  C4WeatherPage.cpp  DIBitmap.cpp  FileVersion.cpp  IconCombo.cpp  InputDlg.cpp  ListBoxEx.cpp  RadioEx.cpp  (+6 more)
engine/: engine.dsp  engine.vc7.vcproj  engine.vc9.vcproj  engine_con.dsp
engine/inc/: C4AList.h  C4Application.h  C4Aul.h  C4ChatDlg.h  C4Command.h  C4ComponentHost.h  C4Components.h  C4Console.h  C4Constants.h  C4Control.h  C4Def.h  C4DefGraphics.h  C4DevmodeDlg.h  C4EditCursor.h  C4Extra.h  C4Facet.h  C4FileSelDlg.h  C4FogOfWar.h  C4Folder.h  C4Fonts.h  C4FullScreen.h  C4Game.h  C4GameControl.h  C4GameLobby.h  C4GameMessage.h  C4GameObjects.h  C4GameOptions.h  C4GameOverDlg.h  C4GamePadCon.h  C4GameParameters.h  C4GameSave.h  C4GameVersion.h  C4GroupSet.h  C4Gui.h  C4IDList.h  C4Id.h  C4Include.h  C4InfoCore.h  C4InputValidation.h  C4InteractiveThread.h  (+70 more)
engine/netio/: NetIO.dsp  TstC4NetIO.cpp
engine/res/: Brush.h  Exact.h  Line.h  Rect.h  Static.h  cr.xpm  engine.rc  resource.h
engine/sec/: C4ConfigShareware.h  C4SecurityCertificates.cpp  C4SecurityCertificates.h
engine/src/: C4AList.cpp  C4Action.cpp  C4Application.cpp  C4Aul.cpp  C4AulExec.cpp  C4AulLink.cpp  C4AulParse.cpp  C4ChatDlg.cpp  C4Client.cpp  C4Command.cpp  C4ComponentHost.cpp  C4Config.cpp  C4Console.cpp  C4Control.cpp  C4Def.cpp  C4DefGraphics.cpp  C4DevmodeDlg.cpp  C4DownloadDlg.cpp  C4EditCursor.cpp  C4Effect.cpp  (+102 more)
group/: Resource.rc  c4group.dsp  c4group.vc7.vcproj  c4group.vc9.vcproj  c4group_cmdl.cpp
licenses/: clonk_content_license.txt  clonk_source_license.txt  clonk_trademark_license.txt
netpuncher/: Puncher.dsp  main.cpp
planet/: .editorconfig  .gitattributes
src/: Bitmap256.cpp  Bitmap256.h  BuildConfig.h  C4AList.cpp  C4AList.h  C4Action.cpp  C4Application.cpp  C4Application.h  C4Attributes.h  C4AudioSystem.cpp  C4AudioSystem.h  C4AudioSystemFmod.cpp  C4AudioSystemFmodRuntime.cpp  C4AudioSystemFmodRuntime.h  C4AudioSystemNone.cpp  C4AudioSystemNone.h  C4AudioSystemSdl.cpp  C4AudioSystemSdl.h  C4Aul.cpp  C4Aul.h  C4AulBCCGenerator.cpp  C4AulExec.cpp  C4AulLink.cpp  C4AulParse.cpp  C4AulScriptStrict.h  C4Awaiter.cpp  C4Awaiter.h  C4Boost.cpp  C4Breakpoint.h  C4ChatDlg.cpp  C4ChatDlg.h  C4Chrono.cpp  C4Chrono.h  C4Client.cpp  C4Client.h  C4Com.h  C4Command.cpp  C4Command.h  C4ComponentHost.cpp  C4ComponentHost.h  (+473 more)
standard/: Standard.dsp  Standard.vc7.vcproj  Standard.vc9.vcproj
tests/: BoostTest.h  CMakeLists.txt  TstC4NetIO.cpp  test_StdSync.cpp
tools/: AutoUpdate.txt  Info.plist  adjust_copyright_years.sh  auto_format.py  default.nix  make_AppImage.sh  make_Graphics.c4g.sh  make_Language.c4g.sh  make_System.c4g.sh  make_archives.sh  make_c4us.sh  make_combined_c4us.sh
xcode/: Info.plist  SDLMain.mm
(+158 files in other folders)
